2001-02-08  Richard Henderson  <rth@redhat.com>

	* elf64-alpha.c (alpha_elf_dynamic_symbol_p): Respect weakness
	before visibility.  Locally defined protected symbols are not
	dynamic.

2001-02-08  Geoffrey Keating  <geoffk@redhat.com>

	* config.bfd: Enable coff64 for rs6000-*.  Patch from
	<hzoli@austin.ibm.com>.

2001-02-07  Mark Elbrecht  <snowball3@bigfoot.com>

	* coffgen.c (coff_find_nearest_line): If stabs info is successfully
	found, do not attempt to find dwarf2 info before returning.

2001-02-07  Jakub Jelinek  <jakub@redhat.com>

	* elflink.h (is_global_symbol_definition): Rename to
	is_global_data_symbol_definition and have it reject function
	symbols.
	(elf_link_is_defined_archive_symbol): Use renamed function.

2001-02-07  Todd Vierling  <tv@wasabisystems.com>

	* libbfd-in.h (bfd_target_vector): Change extern array to pointer.
	* libbfd.h (bfd_target_vector): Likewise.
	* targets.c (bfd_target_vector): Rename to _bfd_target_vector and
        make static; create pointer reference named bfd_target_vector.
	(_bfd_target_vector_entries): Calculate this based on the array
	typed _bfd_target_vector.

2001-02-06  H.J. Lu  <hjl@gnu.org>

	* elfxx-ia64.c (elfNN_ia64_dynamic_symbol_p): Only hidden and
	internal symbols are not dynamic.
	* elf64-alpha.c (alpha_elf_dynamic_symbol_p): Likewise.

2001-02-06  Nick Clifton  <nickc@redhat.com>

	* Makefile.am (BFD64_BACKENDS_CFILES): Remove elf64-ia64.c, so
	that it will not be pulled into the list of files that make up
	po/POTFILES.in.
	* Makefile.in: Regenerate.
	* po/bfd.pot:  Regenerate.

2001-02-06  H.J. Lu  <hjl@gnu.org>

	* bfd/peicode.h (coff_swap_filehdr_in): Remove the e_magic
	checking.
	(pe_bfd_object_p): Rewrite with external_PEI_DOS_hdr and
	external_PEI_IMAGE_hdr.

2001-02-06  Kazu Hirata  <kazu@hxi.com>

	* elf-m10200.c: Fix formatting.

2001-02-04  Nick Clifton  <nickc@redhat.com>

	* elf32-v850.c (v850_elf_reloc): Do not convert reloc addend to PC
	rel, it will be handled later on.
